# backtester-mvp

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  walkforward_instrumentation_implementation.md  walkforward_instrumentation_plan.md
backtest/: __init__.py  engine.py  metrics.py  result.py  runner.py
cli/: __init__.py  output.py  parser.py
config/: __init__.py  backtest.yaml  config.yaml  data.yaml  data_quality.yaml  debug.yaml  exchange_metadata.yaml  manager.py  markets.yaml  parallel.yaml  strategy.yaml  trading.yaml  walkforward.yaml
data/: .cache_manifest.json  1INCH_USD_15m.csv  1INCH_USD_1d.csv  1INCH_USD_1h.csv  1INCH_USD_2h.csv  1INCH_USD_30m.csv  1INCH_USD_5m.csv  1INCH_USD_6h.csv  AAVE_USD_1d.csv  AAVE_USD_6h.csv  ADA_USD_15m.csv  ADA_USD_1d.csv  ADA_USD_1h.csv  ADA_USD_2h.csv  ADA_USD_30m.csv  ADA_USD_6h.csv  ALGO_USD_1d.csv  ALGO_USD_2h.csv  ALGO_USD_30m.csv  ALGO_USD_6h.csv  ANKR_USD_15m.csv  ANKR_USD_1d.csv  ANKR_USD_1h.csv  ANKR_USD_2h.csv  ANKR_USD_30m.csv  ANKR_USD_5m.csv  ANKR_USD_6h.csv  APT_USD_1d.csv  APT_USD_6h.csv  ARB_USD_1d.csv  ARB_USD_6h.csv  ATOM_USD_1d.csv  ATOM_USD_2h.csv  ATOM_USD_6h.csv  AUDIO_USD_15m.csv  AUDIO_USD_1d.csv  AUDIO_USD_1h.csv  AUDIO_USD_2h.csv  AUDIO_USD_30m.csv  AUDIO_USD_5m.csv  (+292 more)
deployment/: Dockerfile  docker-compose.yml
docs/: PRD.md  README.md  data_pipeline.md  data_quality_guide.md  deployment-setup.md  deployment.md  indicators_and_data_sources.md  interface_contract.md  manual_testing_guide.md  metrics_calculation_methodology.md  metrics_implementation_confidence.md  strategy_implementation_guide.md  testing_filters.md
indicators/: __init__.py  library.py
performance/: backtest_performance.jsonl  fetch_performance.jsonl
scripts/: analyze_gaps.py  assess_all_data_quality.py  bulk_fetch.py  bulk_fetch_data.py  check_coinbase_markets.py  check_market_date_ranges.py  diagnose_no_trades.py  fetch_exchange_info.py  fill_all_gaps.py  migrate_cache.py  refetch_market.py  start.ps1  start.sh  test-workflow-local.sh  test_data_system.py  test_end_to_end.py  test_end_to_end_indicators.py  test_indicators_and_sources.py  test_multi_exchange.py  test_single_market.py  test_slippage.py
services/: gap_filling_runner.py  quality_runner.py  scheduler_daemon.py  update_runner.py
strategies/: __init__.py  base_strategy.py  rsi_sma_strategy.py  sma_cross.py
tests/: __init__.py  conftest.py  test_data_quality.py  (+13 more)
(+180 files in other folders)
